<resources>
    <string name="app_name">MyFirstIsmailiaApp</string>
    <string name="boarding_pass_advice">You will be able to view the ride details and track it during its time until reaching the destination</string>
    <string name="driverName">Abanob Fayeq Boktor Aboaliman</string>
    <string name="to_station">To Station</string>
    <string name="cancel_trip">Cancel Trip?</string>
    <string name="signout">Sign Out</string>
    <string name="notifications">Notifications</string>
    <string name="ic_trips">Trips</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="overFlowMenu">Overflow Menu</string>
    <string name="trip_id">Trip ID:</string>
    <string name="enter_trip_id">Enter Trip Id:</string>
    <string name="send_data">send data</string>
    <string name="greeting_user">Hey, Mohamed</string>
    <string name="where_going">Where are you going?</string>
    <string name="search">Search</string>
    <string name="search_view_hint">Search Here ...</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="user_name">Mohamed Atef</string>
    <string name="your_trips">Your Trips</string>
    <string name="wallet">Wallet</string>
    <string name="payment">Payment</string>
    <string name="packages">Packages</string>
    <string name="private_bus">Private Bus</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="privacy_center">Privacy Center</string>
    <string name="travel_from">Travel from</string>
    <string name="enter_phone_number">Enter your phone</string>
    <string name="go_places">Go Places</string>
    <string name="enter_your_mobile_num">|    Enter your mobile number</string>
    <string name="or_connect">Or connect with social</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="bio">By continuing, you agree to SWVLs Terms and\n Privacy.</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_full_name">Enter your name</string>
    <string name="enter_email">Enter your email</string>

</resources>