<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.FirstScreenActivity"
    android:padding="40dp">
    <TextView
        android:id="@+id/trip_id"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/trip_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_trip_id"
        android:hint="@string/enter_trip_id"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/trip_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnSendData"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@color/red"
        android:text="@string/send_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_trip_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>